--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2810,8 +2810,6 @@ section[role="leader"] .leader-popout {
 }
 
 
-
-
 /* BEGIN BANNER STLYING */
 
 /* BEGIN LEVEL ONE SLIDER DIV */
@@ -2830,6 +2828,7 @@ section[role="leader"] .leader-popout {
   display: table;
 }
 .slider.home {
+  display: block;
   height: 400px;
 }
 
@@ -2841,16 +2840,10 @@ section[role="leader"] .leader-popout {
 	display: table-cell;
   vertical-align: middle;
   position: relative;
-  padding-bottom: 40px;
   width: 100%;
 }
 
-.slider-content.with-excerpt {
-  display: table-cell;
-  vertical-align: middle;
-  position: relative;
-  padding: 0px;
-  width: 100%;
+.slider.with-excerpt .slider-content {
 }
 
 /* END LEVEL TWO SLIDER DIV */
@@ -2858,8 +2851,8 @@ section[role="leader"] .leader-popout {
 /* BEGIN LEVEL THREE SLIDER DIV */
 
 .slider .slider-content .inner-content {
-  width: 60%;
-  margin: 0 auto;
+/*  width: 60%;
+  margin: 0 auto;*/
 }
 
 /* END LEVEL THREE SLIDER DIV */
@@ -2867,55 +2860,45 @@ section[role="leader"] .leader-popout {
 
 /* BEGIN SLIDER CONTENT */
 
-.slider img { 
-  width:100%; 
-  min-height: 150px
-}
-
 .slider h1.entry-title {
-  color: #FFF;
-	display: block;
-	font-family: oswaldbold;
-	font-size: 6.5em;
-	line-height: 2.5em;
-	position: absolute;
-	text-align: center;
-	text-transform: uppercase;
-  width: 100%;
-  line-height: 65px;
-  text-align: center;
-  display: inline-block;
+  display: block;
   position: relative;
   vertical-align: top;
+  color: #FFF;
+	font-family: oswaldbold;
+	font-size: 6.5em;
+	text-align: center;
+	text-transform: uppercase;
+	line-height: 2.5em;
+  line-height: 65px;
   margin-top: 97px;
+/*  width: 100%;*/
 }
 
-.slider h1.with-excerpt {
-  width: 48%;
-  max-width: 480px;
-  line-height: 80px;
-  text-align: right;
-  display: inline-block;
+.slider.with-excerpt h1 {
   position: relative;
   display: table-cell;
+  line-height: 80px;
+  text-align: right;
   vertical-align: middle;
-  padding-right: 50px;
+  margin-right: 50px;
+/*  width: 48%;*/
+  max-width: 430px;
 }
 
-.long h1.with-excerpt {
+.slider.with-excerpt .long h1 {
   font-size: 5em;
 }
 
 .slider p {
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
   color: #ffffff;
   font-size: 2.5em;
   line-height: 1.7em;
-  width: 48%;
-  max-width: 480px;
-  position: relative;
-  display: inline-block;
-  display: table-cell;
-  vertical-align: middle;
+/*  width: 48%;*/
+  max-width: 430px;
 }
 
 /* END SLIDER CONTENT */
