--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2818,18 +2818,25 @@ section[role="leader"] .leader-popout {
 	z-index: 0;
 	position: relative;
   height: 250px;
-  display: table;
+  width: 100%;
+  text-align: center;
+  display: block;
 }
 
 .slider.with-excerpt {
-	z-index: 0;
-	position: relative;
   height: 300px;
-  display: table;
 }
 .slider.home {
   display: block;
   height: 400px;
+}
+ 
+.slider:before {
+  content: '';
+  display: inline-block;
+  height: 100%; 
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */    
 }
 
 /* END LEVEL ONE SLIDER DIV */
@@ -2837,23 +2844,21 @@ section[role="leader"] .leader-popout {
 /* BEGIN LEVEL TWO SLIDER DIV */
 
 .slider-content {
-	display: table-cell;
+  display: inline-block;
   vertical-align: middle;
   position: relative;
-  width: 100%;
 }
 
 .slider.with-excerpt .slider-content {
+  width: 910px;
 }
 
 /* END LEVEL TWO SLIDER DIV */
 
 /* BEGIN LEVEL THREE SLIDER DIV */
 
-.slider .slider-content .inner-content {
-/*  width: 60%;
-  margin: 0 auto;*/
-}
+/*.slider .slider-content .inner-content {
+}*/
 
 /* END LEVEL THREE SLIDER DIV */
 
@@ -2861,44 +2866,35 @@ section[role="leader"] .leader-popout {
 /* BEGIN SLIDER CONTENT */
 
 .slider h1.entry-title {
-  display: block;
+  display: table-cell;
+  vertical-align: middle;
   position: relative;
-  vertical-align: top;
   color: #FFF;
 	font-family: oswaldbold;
-	font-size: 6.5em;
-	text-align: center;
+	font-size: 6.9em;
 	text-transform: uppercase;
-	line-height: 2.5em;
-  line-height: 65px;
-  margin-top: 97px;
-/*  width: 100%;*/
 }
 
 .slider.with-excerpt h1 {
-  position: relative;
-  display: table-cell;
-  line-height: 80px;
+  font-size: 6.5em;
+  line-height: 1.25em;
   text-align: right;
-  vertical-align: middle;
-  margin-right: 50px;
-/*  width: 48%;*/
-  max-width: 430px;
+  width: 430px;
 }
 
-.slider.with-excerpt .long h1 {
-  font-size: 5em;
+.slider.long h1 {
+  font-size: 4.9em;
 }
 
 .slider p {
   position: relative;
   display: table-cell;
-  vertical-align: middle;
   color: #ffffff;
-  font-size: 2.5em;
-  line-height: 1.7em;
-/*  width: 48%;*/
-  max-width: 430px;
+  font-size: 2.8em;
+  line-height: 1.4em;
+  width: 480px;
+  padding-left: 50px;
+  text-align: left;
 }
 
 /* END SLIDER CONTENT */
