Removing homepage banner whitespace on responsive

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2816,7 +2816,7 @@ section[role="leader"] .leader-popout {
 
 .slider-home {
   display: block;
-  height: 400px;
+  max-height: 400px;
 }
 
 .slider {
