--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2919,33 +2919,16 @@ section[role="leader"] .leader-popout {
 
 @media only screen and (max-width:1250px) {
 
-  .slider h1.with-excerpt {
+  .slider.with-excerpt h1 {
     font-size: 5.5em;
-    width: 48%;
-    line-height: 80px;
-    text-align: right;
-    display: inline-block;
-    position: relative;
-  /*  vertical-align: top;*/
-  /*  margin-top: 45px;*/
-    display: table-cell;
-    vertical-align: middle;
   }
 
-  .long h1.with-excerpt {
+  .long.with-excerpt h1 {
     font-size: 4.5em;
   }
 
   .slider p {
-    color: #ffffff;
     font-size: 2.5em;
-    width: 48%;
-    position: relative;
-    /*padding-left: 40px;*/
-    display: inline-block;
-  /*  margin-top: 41px;*/
-    display: table-cell;
-    vertical-align: middle;
   }
 
 }
@@ -2965,9 +2948,9 @@ section[role="leader"] .leader-popout {
     float: none;
     margin: 30px 20px 0 20px !important;
   }
+}
 
 @media only screen and (max-width:930px) {
-  /* TODO: replicate this section everywhere */
   .slider {
     display: table; 
   }
@@ -3022,10 +3005,10 @@ section[role="leader"] .leader-popout {
   }
   
   .section_items li img {
-  margin-right: auto;
-  margin-left: auto;
-  display: block;
-  padding: 0;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    padding: 0;
   }
 }
 
