--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1394,6 +1394,8 @@ section[role="blog"] .date {
 	background: url(img/date-bg.png) no-repeat 0 0;
 
 	margin: 0 35px 0 0;
+	
+	min-height: 80px;
 
 }
 
