--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3071,6 +3071,14 @@ section[role="leader"] .leader-popout {
 
 }
 
+@media only screen and (max-width:320px) {
+  .slider.long h1 {
+    font-size: 3.2em;
+  }
+  .slider.long p {
+    font-size: 1.6em;
+  }
+}
 
 /* About Us Styling */
 .wrap br{
