--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -711,31 +711,23 @@ section[role="main"] .view-article {
 	margin-top:30px;
 }
 
-section[role="leader"] {
+.custom-fancybox-wrapper {
   padding: 40px 0 40px;
 }
 
-section[role="leader"] h3 {
+.custom-fancybox-wrapper h3 {
 	color:#667280;
 	font-size:44px;
 	font-family:oswaldbold;
 	text-align:center;
 }
 
-/*section[role="leader"] img.leader-thumbnail:hover{
-  display: none;
-}
-
-section[role="leader"] img.leader-hover-thumbnail:hover{
-  display: block;
-}*/
-
-section[role="leader"] ul {
+.custom-fancybox-wrapper ul {
   list-style-type: none;
   padding: 0;
 }
 
-section[role="leader"] ul li {
+.custom-fancybox-wrapper ul li {
   display: block;
   float: left;
   width: 199px;
@@ -743,26 +735,26 @@ section[role="leader"] ul li {
   line-height: 22px;
 }
 
-section[role="leader"] ul li.last {
+.custom-fancybox-wrapper ul li.last {
   margin: 30px 0 0 0;
 }
 
-section[role="leader"] ul li a:hover {
+.custom-fancybox-wrapper ul li a:hover {
   text-decoration: none;
 }
-section[role="leader"] h4 {
+.custom-fancybox-wrapper h4 {
   font-family: robotoregular;
   font-size: 18px;
   margin: 0;
 }
-section[role="leader"] .tagline {
+.custom-fancybox-wrapper .tagline {
   font-family: robotolight;
   font-size: 14px;
   color: #667280;
   line-height: 3px;
 }
 
-.leader-popout-content p {
+.custom-fancybox-popout-content p {
   margin-top: 0px;
 }
 
@@ -876,44 +868,44 @@ section[role="leader"] .tagline {
 }*/
 
 
-.leader-popout {
+.custom-fancybox-popout {
   max-width: 680px;
 }
 
-.leader-popout-left{
+.custom-fancybox-popout-left{
   width: 200px;
   float: left;
   margin: 25px 5px 15px 25px;
 }
-.leader-popout-left img.leader-thumbnail {
+.custom-fancybox-popout-left img.custom-fancybox-thumbnail {
   float: left;
 }
 
-.leader-popout-right {
+.custom-fancybox-popout-right {
   max-width: 410px;
   float: left;
   padding: 20px;
 }
 
-.leader-popout-content {
+.custom-fancybox-popout-content {
   overflow-y: scroll;
   overflow-x: hidden;
   height: 345px;
   margin-top: 20px;
 }
 
-.leader-popout-right h4 {
+.custom-fancybox-popout-right h4 {
   font-family: robotolight;
   font-size: 28px;
   margin: 0.1em 0 0.5em 0;
 }
 
-.leader-popout-right .tagline {
+.custom-fancybox-popout-right .tagline {
   font-family: robotobold;
   font-size: 14px;
 }
 
-.leader-popout-right p {
+.custom-fancybox-popout-right p {
   font-family: robotolight;
   font-size: 14px;
 }
@@ -2803,11 +2795,11 @@ p a.imgpartners:nth-child(4) img {
 
 \*------------------------------------*/
 
-section[role="leader"] .leader-hover-thumbnail {
+.custom-fancybox-hover-thumbnail {
   display: none;
 }
 
-section[role="leader"] .leader-popout {
+.custom-fancybox-popout {
   display: none;
 }
 
@@ -2938,16 +2930,16 @@ section[role="leader"] .leader-popout {
 }
 
 @media only screen and (max-width:960px) {
-  section[role="leader"] ul {
+  .custom-fancybox-wrapper ul {
     text-align: center;
   }
-  section[role="leader"] ul li {
+  .custom-fancybox-wrapper ul li {
     display: inline-table;
     float: none;
     margin: 30px 20px 0 20px;
     text-align: left;
   }
-  section[role="leader"] ul li.last {
+  .custom-fancybox-wrapper ul li.last {
     display: inline-table;
     float: none;
     margin: 30px 20px 0 20px !important;
