Working on FancyBox popout for Insights

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3079,3 +3079,11 @@ p a.imgpartners:nth-child(4) img {
 .wrap br{
   display: none;
 }	  
+
+/* Insights page */
+/*.marketo-insight {
+  height: 420px;
+}*/
+
+
+
