Fix hover for leadership

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -766,7 +766,8 @@ section[role="main"] .view-article {
   margin: 30px 0 0 0;
 }
 
-section[role="leader"] .custom-fancybox-wrapper ul li a:hover {
+section[role="leader"].custom-fancybox-wrapper.executive-team ul li a:hover,
+section[role="leader"].custom-fancybox-wrapper.board-of-directors ul li a:hover {
   background-position: -199px 0;
   width: 199px;
   height: 212px;
