--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -741,12 +741,12 @@ section[role="main"] .view-article {
   display: block;
   float: left;
   width: 199px;
-  margin: 30px 38px 0 0;
+  margin: 0 38px 0 0;
   line-height: 22px;
 }
 
 .custom-fancybox-wrapper ul li.last {
-  margin: 30px 0 0 0;
+  margin: 0;
 }
 
 .custom-fancybox-wrapper ul li a:hover {
