--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3158,6 +3158,9 @@ p a.imgpartners:nth-child(4) img {
      font-size: 5em;
    }
    
+   .slider.long h1 {
+     font-size: 4.2em;
+   }
    .slider.with-excerpt h1 {
     /* line-height: 1.1em; */
    }
@@ -3219,10 +3222,15 @@ section[role="insight"].custom-fancybox-wrapper h4 {
   margin-top: 10px;
   line-height: 1.6em;
 }
+
+.insight-thumbnail {
+  margin-bottom: 8px;
+}
+
 .custom-fancybox-popout-left h4{
   font-family: robotolight;
   font-size: 32px;
-  margin: 14px 0 -10px 0;
+  margin: 6px 0 -10px 0;
 }
 
 .custom-fancybox-popout-left p{
