--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1640,6 +1640,36 @@ li.comment {
   font-size: 16px;
 }
 
+h3.comment-reply-title {
+  font-size: 48px;
+  text-align: center;
+}
+
+p.comment-notes {
+  font-size: 14px !important;
+  margin: 0 0 30px 0;
+}
+
+#commentform input, textarea{
+  font-family: robotolight;
+  width: 100%;
+  display: block;
+  margin-top: 20px;
+}
+
+#commentform .required{
+  color: #990101;
+  font-size: 10px;
+  vertical-align: super;
+}
+
+#commentform label {
+  font-size: 18px;
+}
+p.form-allowed-tags {
+  display: none;
+}
+
 /** Submenu **/
 
 	.subnav {
