--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3147,8 +3147,25 @@ p a.imgpartners:nth-child(4) img {
    .category .slider h1.entry-title {
      font-size: 3.0em;
    }
+   
+   /*Responsive for dropdown filtering on insights page*/
 
+  .filter-options span {
+    float: none !important;
+  }
+  
+  .filter-options {
+    width: 170px !important;
+  }
+  
+  .selector-box {
+    margin-bottom: 15px !important;
+  }
+  
+ 
 }
+
+
 
 @media only screen and (max-width:400px) {
    section[role="about"] p,
@@ -3235,17 +3252,13 @@ span.insight-category-popout {
 
 /* Style filters on insights as drop downs*/
 
-.filter-options span{
-  margin-right: 10px;
-  margin-left: 20px;
-  
 }
 .filter-options span:first-child{
   margin-left: 0px;
 }
 .filter-options{
   position:relative;
-  width: 625px;
+  width: 636px;
   margin: 0 auto;
   text-align: left;
 }
@@ -3256,6 +3269,7 @@ span.insight-category-popout {
   font-weight: bold;
   font-size: 14px;
   padding-top: 5px;
+  margin-right: 10px;
 }
 .filter-options a {
   text-decoration:none;
@@ -3266,7 +3280,7 @@ span.insight-category-popout {
   height: 30px;
 }
 .selector-box {
-  background: url("http://localhost:8888/rr/wp-content/uploads/2013/09/filter-arrow3.png") no-repeat scroll 0 0 #ffffff;
+  background: url("/wp-content/uploads/2013/09/filter-arrow3.png") no-repeat scroll 0 0 #ffffff;
   display:block;
   position: relative;
   width:170px;
@@ -3276,13 +3290,14 @@ span.insight-category-popout {
   cursor: pointer;
   font-family: robotolight !important;
   font-weight: normal !important;
+  margin-right: 20px !important;
 }
 #format-select.selector-box{
-  background: url("http://localhost:8888/rr/wp-content/uploads/2013/09/filter-arrow-short.png") no-repeat scroll 0 0 #ffffff;
+  background: url("/wp-content/uploads/2013/09/filter-arrow-short.png") no-repeat scroll 0 0 #ffffff;
   width: 110px;
 }
 #region-select.selector-box{
-  background: url("http://localhost:8888/rr/wp-content/uploads/2013/09/filter-arrow-short.png") no-repeat scroll 0 0 #ffffff;
+  background: url("/wp-content/uploads/2013/09/filter-arrow-short.png") no-repeat scroll 0 0 #ffffff;
   width: 110px;
 }
 
@@ -3332,14 +3347,7 @@ span.insight-category-popout {
   color: #990101;
 }
 
-.filter-wrap {
-  width: 110px;
-  float: left;
-}
 
-.topic-wrap {
-  width: 170px;
-}
 
 /**** Isotope Filtering ****/
 
