Adding back leadership styling

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -948,7 +948,7 @@ section[role="leader"].custom-fancybox-wrapper.board-of-directors ul li a:hover 
 .custom-fancybox-popout-content {
   overflow-y: scroll;
   overflow-x: hidden;
-  /*height: 345px;*/
+  height: 345px;
   margin-top: 20px;
 }
 
@@ -956,7 +956,6 @@ section[role="leader"].custom-fancybox-wrapper.board-of-directors ul li a:hover 
   height: 180px;
 }
 
-/* 515px */
 .marketo-insight {
   height: 475px;
 }
