--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3455,6 +3455,9 @@ span.insight-category-popout {
      font-size: 3.0em;
    }
    
+   .slider.long h1 {
+   font-size: 4.6em;
+   
    /*Responsive for dropdown filtering on insights page*/
 
   .filter-options span {
