--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -347,7 +347,7 @@ section[role="customers"] h3,section[role="rr-number"] h3 {
 
 section[role="about-us"] h5 {
 	color:#667280;
-	font-family:robotolight;
+	font-family:robotothin;
 	font-size:30px;
 	margin-bottom:35px;
 	text-align:center;
@@ -2104,6 +2104,18 @@ width: 100%;
 
     font-weight: normal;
 
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'robotothin';
+    src: url('fonts/roboto-thin-webfont.eot');
+    src: url('fonts/roboto-thin-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/roboto-thin-webfont.woff') format('woff'),
+         url('fonts/roboto-thin-webfont.ttf') format('truetype'),
+         url('fonts/roboto-thin-webfont.svg#robotothin') format('svg');
+    font-weight: normal;
     font-style: normal;
 
 }
