Fixing issue with short icon sections

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1005,7 +1005,7 @@ ul.section_items li {
 	margin-bottom: 15px;
 }
 .section_items li div {
-	width: 85%;
+  width: 774px;
 	display: inline-block;
 }
 .section_items li div > h4 {
