Fixed responsive header for long category titles

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -3560,6 +3560,9 @@ span.insight-category-popout {
   .slider.long p {
     font-size: 1.6em;
   }
+  .category .slider h1.entry-title {
+    font-size: 2.4em;
+  }
 }
 
 /* END MEDIA QUERIES */
