--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -542,14 +542,14 @@ section[role="enough"] h3 {
 }
 
 section[role="enough"] .contact-us {
-/* background: url("http://rr.dev.secretsushi.com/wp-content/uploads/2013/08/contact-us1.png") no-repeat scroll 240px 138px transparent; */
+/* background: url("/wp-content/uploads/2013/08/contact-us1.png") no-repeat scroll 240px 138px transparent; */
 	margin:0 auto;
 	padding-bottom:0px;
 	width:290px;
 }
 
 section[role="enough"] .contact-us p {
-	background:url(http://rr.dev.secretsushi.com/wp-content/uploads/2013/08/contact-us1.png) no-repeat scroll transparent;
+	background:url(/wp-content/uploads/2013/08/contact-us1.png) no-repeat scroll transparent;
 	color:#fafbfc;
 	font-size:44px;
 	font-family:oswaldbold;
@@ -561,7 +561,7 @@ section[role="enough"] .contact-us p {
 }
 
 section[role="enough"] .contact-us p:hover {
-	background:url(http://rr.dev.secretsushi.com/wp-content/uploads/2013/08/contact-us-h1.png) no-repeat scroll transparent;
+	background:url(/wp-content/uploads/2013/08/contact-us-h1.png) no-repeat scroll transparent;
 }
 
 section[role="enough"] .contact-us p > span {
