--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -231,7 +231,7 @@ section[role="about-us"] p {
 	font-size:18px;
 	line-height:30px;
 	font-family:robotolight;
-	padding:0 27px 40px 0;
+	padding:0 27px 0 0;
 	border-right:1px solid #e4e6e8;
 }
 
